# metasploit-rust

./: README.md
akkadian-aco-rce/: akkadian_aco_rce.crs
example-module/: Cargo.toml
example-module/src/: example-module.crs  main.rs
metasploit-shim/: Cargo.toml  LICENSE
metasploit-shim/src/: lib.rs  logging.rs  report.rs
