[package]
name = "metasploit-shim"
version = "0.1.0"
authors = ["deadjakk <deadjakk@shell.rip>"]
edition = "2018"
description = "metasploit rust shim library"
repository = "https://github.com/deadjakk/metasploit-rust-shim/"
license = "GPL-2.0-or-later"
keywords = ["penetration","testing","metasploit","msf","shim"]
categories = ["development-tools::ffi"]
include = ["src/**/*","Cargo.toml"]
publish = true

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

